# X-Watcher

./: .dockerignore  .env.docker.example  .env.example  .gitignore  CLAUDE.md  Dockerfile  IMPROVEMENT_PLAN.md  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.kiro/: spec-status-news-scraper.md
.kiro/specs/feed-api-zh/: design.md  gap-analysis.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/news-deduplicator-zh/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/news-scraper-zh/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
alembic/: env.py
alembic/versions/: 492f70102988_add_scraper_schedule_config_table.py  6f7fdc2c3fd3_add_db_created_at_index.py  7c5ed982a2eb_add_password_hash_and_api_keys_table.py  956cd4f9c8eb_add_preference_manager_tables.py  a1b2c3d4e5f6_drop_referenced_tweet_id_fk.py  b3a1d5e7f9c2_add_scraper_fetch_stats_table.py  c4d5e6f7g8h9_add_referenced_tweet_fields.py  d5e6f7g8h9i0_add_referenced_tweet_author.py  e69b6de02222_add_tweets_and_summary_tables.py  f1a2b3c4d5e6_drop_preference_tables_and_priority.py  g2h3i4j5k6l7_add_is_enabled_to_schedule_config.py
docs/: api-guide.md  architecture.md  nanobot-integration-plan.md  news-scraper.md  test-performance-optimization.md  user-guide.md
examples/: api_examples.py
scripts/: cleanup_summaries.py  clear_test_data.py  debug_fetch.py  seed_admin.py  seed_follows.py  test_feed.py  test_summary_prompt.py
src/: __init__.py  config.py  main.py  scheduler_accessor.py
src/agent/: __init__.py  config.py  tools.py
src/database/: __init__.py  async_session.py  models.py
src/deduplication/: __init__.py
src/feed/: __init__.py
src/monitoring/: __init__.py  metrics.py  middleware.py  routes.py
src/preference/: __init__.py
src/scraper/: __init__.py  client.py  parser.py  scheduled_job.py  scraping_service.py  task_registry.py  validator.py
src/shared/: schemas.py
src/summarization/: __init__.py  logging_utils.py
src/web/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
tests/: conftest.py  test_scheduler_accessor.py
tests/api/: test_tweets_routes.py  test_tweets_routes_sync.py
tests/deduplication/: __init__.py  test_deduplication_service.py  test_detectors.py
tests/feed/: __init__.py  test_feed_api.py  test_feed_service.py
tests/integration/: test_auto_summarization.py  test_summarization_integration.py
tests/performance/: test_summarization_performance.py
tests/preference/: __init__.py  test_admin_api.py  test_api_schemas.py  test_domain_models.py  test_news_sorting.py  test_preference_api.py  test_preference_repository.py  test_preference_service.py  test_relevance_service.py  test_schedule_api.py  test_schedule_repository.py  test_schedule_service.py  test_scraper_config_repository.py  test_scraper_config_router.py  test_scraper_config_service.py  test_tweet_repository_extension.py  test_validators.py
tests/scraper/: __init__.py  test_admin_api.py  test_batch_dedup.py  test_error_scenarios.py  test_fetch_stats_repository.py  test_integration.py  test_limit_calculator.py  test_scraping_service.py  test_task_registry.py  test_tweet_parser.py  test_tweet_repository.py  test_tweet_validator.py  test_twitter_client.py
tests/summarization/: __init__.py  test_api_routes.py  test_domain_models.py  test_migration.py  test_orm_models.py  test_repository.py  test_structured_logging.py  test_summarization_service.py
tests/unit/: test_config.py  test_main.py  test_models.py
tests/user/: test_admin_api.py  test_auth_api.py  test_auth_dependency.py  test_auth_service.py  test_user_api.py  test_user_repository.py  test_user_service.py
(+147 files in other folders)
